# Differentiable-Motif-Discovery

./: .gitignore  README.md  __init__.py  environment.yml  experiments_encoders_colab.ipynb  infer.py  pyproject.toml  train.py  tune.py  utils.py
dmd_project.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
models/: base_gnn.py  deepsets.py  dmd_model.py  graph_embeddings.py  motif_encodings.py  motif_generator.py  motif_proposition.py  weight_assignement.py  weight_assignment.py
notebooks/: DMD_original_pipeline.ipynb
results/: analyze_results.py
tasks/: graph_classification.py  node_classification.py
tests/: test_dmd_model.py  test_end_to_end.py  test_experiment_logger.py  test_graph_classification.py  test_graph_embeddings.py  test_losses.py  test_motif_encodings.py  test_motif_proposition.py  test_utils.py  test_weight_assignment.py
tools/: experiment_logger.py  graph_embedding.py  losses.py  metrics.py
