[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dmd_project"
version = "0.1.0"
description = "Differentiable Motif Discovery"
authors = [
    {name = "gf"}
]

# Cette section aide Python à trouver tes dossiers automatiquement (models, utils, etc.)
[tool.setuptools.packages.find]
where = ["."]